config-root/namespaces/jx-staging/nodeapp2/nodeapp2-nodeapp2-deploy.yaml
# Source: nodeapp2/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodeapp2-nodeapp2
  labels:
    draft: draft-app
    chart: "nodeapp2-0.0.1"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    meta.helm.sh/release-name: 'nodeapp2'
    wave.pusher.com/update-on-config-change: 'true'
  namespace: jx-staging
spec:
  selector:
    matchLabels:
      app: nodeapp2-nodeapp2
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: nodeapp2-nodeapp2
    spec:
      serviceAccountName: nodeapp2-nodeapp2
      containers:
        - name: nodeapp2
          image: "ghcr.io/sagarshrestha24/nodeapp2:0.0.1"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
        - name: "tekton-container-registry-auth"
