config-root/namespaces/jx-staging/nodeapp2/nodeapp2-svc.yaml
# Source: nodeapp2/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeapp2
  labels:
    chart: "nodeapp2-0.0.1"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    meta.helm.sh/release-name: 'nodeapp2'
  namespace: jx-staging
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: nodeapp2-nodeapp2
